# gpt2-tokenizer-and-model

./: README.md  pyproject.toml
notebooks/: tokenizers.ipynb
tests/: test_tokenizer.py  tests_simple.py
tokenizers/: basic.py  regex.py
